css/main.css
body {
	font-family: 'Roboto', 'sans-serif';
	background-color: #333;
}

h1,
h2,
h3,
h4,
h5,
h6 {
	line-height: 20px;
	font-family: 'Roboto', 'sans-serif';
	font-weight: 300;
	font-style: normal;
}

a:hover {
	color: #FF5533;
}

.row.full {
	max-width: 100%;
}


.middle-header {
	text-align: left;
}

.content img {
	width: 100%;
}

.content img.author {
	float: right;
	border-radius: 50%;
	height: 48px;
	width: 48px;
}

.content h2 {
	margin-top: 1.25rem;
	font-weight: 800;
}

.content h4 {
	border-bottom: 1px solid #34495e;
	text-transform: uppercase;
	color: #aaa;
	padding: 0.4em 0;
	font-size: 80%;
	font-weight: 500;
	letter-spacing: 0.1em;
}

.row.post-content {
	margin-left: 0;
	margin-right: 0;
}

.post-content .columns {
	padding: 0;
}

.box-caption {
	text-align: center;
	line-height: 20px;
	position: relative;
	font-size: 16px;
	padding: 20px 15px;
	min-height: 60px;
	line-height: 20px;
	overflow: hidden;
	background-color: #f7f7f7;
}

.box-caption h2 {
	font-size: 16px;
	color: #4c4c4c;
	margin-top: 0;
	font-weight: 300;
}

.box-caption a {
	color: #bebebe;
	font-size: 12px;
}

.box-caption a:hover {
	color: #FF5533;
}

.social-header i {
	font-size: 3rem;
	color: #fff;
	margin: 10px 15px;
}

.social-header i:hover {
	transform: scale(1.5);
	transition: .6s ease-in-out;
}

.caption {
	margin: 8rem auto;
	text-align: center;
	color: #fff;
}

.caption h1 {
	font-family: 'Playfair Display', 'serif';
	font-size: 40px;
	margin-bottom: 20px;
	font-weight: 600;
	color: #fff;
	line-height: 40px;
}

.caption p {
	font-size: 14px;
}

.hero {
	height: 320px;
	width: 100%;
	background-image: url(/images/dawn-trees-header3.jpg);
	background-position: center center;
	-webkit-background-size: cover;
	-moz-background-size: cover;
	background-size: cover;
	background-repeat: no-repeat;
}

.row .hero.row {
	margin-right: 0;
	margin-left: 0;
}

.content {
	padding-right: 0;
	padding-left: 44px;
	background-color: #fff;
}

.post-content {
	padding: 60px;
}


.sidebar {
	display: inline-block;
	background-color: #34495e;
	padding-left: 30px;
	padding-right: 0;
	height: 100%;
}

.sidebar h1 {
	color: #fff;
	text-transform: uppercase;
	font-weight: 800;
}

.sidebar h2 {
	font-weight: 300;
	color: #B0CADB;
}

.logo {
	color: #fff;
	font-family: 'Playfair Display', 'serif';
	font-size: 42px;
	font-weight: 700;
	margin-top: 40px;
}

#sidebar-trigger {
	position: absolute;
	right: 0;
	top: 0;
	float: right;
	width: 60px;
	height: 100%;
}

.menu-icon {
	width: 60px;
	height: 60px;
	line-height: 72px;
	text-align: center;
	color: #666;
}

.menu-icon i:hover {
	color: #ddd;
}

.menu-icon i {
	font-size: 40px;
	line-height: 6px;
}

.menu-icon::after,
.menu-icon:hover:after {
	background: none;
	box-shadow: none;
}

ul.side-nav {
	list-style: none;
	line-height: 45px;
}

ul.side-nav > li:hover > a {
	border-bottom: 2px solid #fff;
	color: #fff;
}

.side-nav a {
	color: #ddd;
}


.sidebar {
	background-color: #333;
	-webkit-transition: all 0.5s;
	-moz-transition: all 0.5s;
	-ms-transition: all 0.5s;
	-o-transition: all 0.5s;
	transition: all 0.5s;
	left: -230px;
	position: fixed;
	width: 25%;

}

.sidebar:hover {
	box-shadow: 20px 0 0 rgba(0, 0, 0, 0.2);
	-webkit-transform: translateX(230px);
	-moz-transform: translateX(230px);
	-ms-transform: translateX(230px);
	-o-transform: translateX(230px);
	transform: translateX(230px);
}

.sidebar: hover

.sidebar:out {
	box-shadow: none;
	-webkit-transform: translateX(0);
	-moz-transform: translateX(0);
	-ms-transform: translateX(0);
	-o-transform: translateX(0);
	transform: translateX(0);
}

.float-bar {
    position: fixed;
    z-index: 999;
    right: 20px;
    bottom: 20px;
    height: 60px;
    min-width: 60px;
    width: auto;
	background-color: #333;
	color: #fff;
	padding-top: 3px;
}

